# sqlalchemy-tasks

1/: Makefile  TASK.md
1/src/: solution.py
1/tests/: test_solution.py
2/: TASK.md
2/src/: solution.py
2/tests/: test_solution.py
3/: TASK.md
3/src/: solution.py
3/tests/: test_solution.py
4/: TASK.md  pyproject.toml
4/src/: models.py  solution.py
4/tests/: test_solution.py
5/: TASK.md
5/src/: models.py  solution.py
5/tests/: test_solution.py
6/: README.md  TASK.md
6/src/: solution.py
6/tests/: test_solution.py
7/: TASK.md
7/src/: models.py  solution.py
7/tests/: test_solution.py
8/: TASK.md  pyproject.toml
8/src/: models.py  solution.py
8/tests/: conftest.py  test_solution.py
